tests/sumo/errors/high_time/options.sumo
-n net.net.xml --route-files input_routes.rou.xml --begin 12345678901234567890

